src/test/config/jira/ingress-EKS.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ${HELM_RELEASE_NAME}
  annotations:
    "kubernetes.io/ingress.class": nginx
    "nginx.ingress.kubernetes.io/affinity": cookie
    "nginx.ingress.kubernetes.io/affinity-mode": persistent
    "nginx.ingress.kubernetes.io/proxy-connect-timeout": "120"
    "nginx.ingress.kubernetes.io/proxy-read-timeout": "120"
    "nginx.ingress.kubernetes.io/proxy-send-timeout": "120"
    "nginx.ingress.kubernetes.io/proxy-body-size": "8m"     # needed to upload plugins, including the func test plugin
spec:
  rules:
    - host: ${HELM_RELEASE_NAME}.${eks.ingress.domain}
      http:
        paths:
          - backend:
              serviceName: ${HELM_RELEASE_NAME}
              servicePort: 80
            path: /
